feat: implement conditional flag rules with resource-based allow/deny evaluation logic